# animated-a-star-cli

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml
docs/: architecture.md
src/animated_a_star_cli/: __init__.py  __main__.py  cli.py  config.py
src/animated_a_star_cli/core/: astar_state.py  config.py  map.py
src/animated_a_star_cli/ui/: parser.py  render.py  render_context.py
tests/unit/: test_config.py  test_map.py  test_parser.py  test_render.py
